# Games101-VS

./: Games101-vs.sln  Games101-vs.vcxproj  Games101-vs.vcxproj.filters  README.md  binary_pt.ppm  binary_pt_1024x1024_spp1024.ppm  binary_pt_50x50.ppm  binary_pt_512x512.ppm  binary_pt_CookTorrance_Glass.ppm  binary_pt_CookTorrance_Glass2.ppm  binary_pt_CookTorrance_Glass3.ppm  binary_pt_CookTorrance_Glass4.ppm  binary_pt_CookTorrance_Glass5.ppm  binary_pt_CookTorrance_Glass5_no_depthlimit.ppm  binary_pt_CookTorrance_Glass5_no_depthlimit_Hammersley.ppm  binary_pt_Microfacet_1.ppm  binary_pt_Microfacet_1024x1024_800spp.ppm  binary_pt_Microfacet_2.ppm  binary_pt_Microfacet_Blinn.ppm  binary_pt_Microfacet_Blinn_MSAA.ppm  binary_pt_Microfacet_Blinn_test.ppm  binary_pt_test.ppm  binary_pt_test_other.ppm  binary_pt_test_other_MaxDepth2.ppm  binary_pt_test_other_MaxDepth20.ppm  binary_pt_test_other_MaxDepth2_testColor.ppm  binary_pt_test_other_MaxDepth3.ppm
Assignment1/: CMakeLists.txt  README.md  main.cpp  rasterizer.cpp  rasterizer.hpp
Homework2/: CMakeLists.txt  Triangle.cpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Homework3/: main.cpp  rasterizer.cpp  rasterizer.hpp
Homework4/: README.md  main.cpp
Homework5/Assignment5/: README.md  Renderer.cpp  Triangle.hpp
Homework5/Assignment5/images/: binary.ppm
Homework6/Homework6/Assignment6/: BVH.cpp  BVH.hpp  Scene.cpp  (+6 more)
Homework7/Assignment7/: AreaLight.hpp  BVH.cpp  BVH.hpp  Bounds3.hpp  Material.hpp  Object.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
